Fix overlapping of search header and paging controls
Increase the breakpoint at which the paging controls start floating
to the right of the header at ``screen-sm-min`` instead of
``screen-xs-min`` (that's about 768px).

Addresses #774, #935

--- a/static/less/search.less
+++ b/static/less/search.less
@@ -21,7 +21,7 @@ body.search {
     text-align: left !important;
     background: none !important;
 
-    @media (min-width: @screen-xs-min) {
+    @media (min-width: @screen-sm-min) {
       float: left;
     }
   }
@@ -43,7 +43,7 @@ body.search {
 .results-paging {
   text-align: left;
 
-  @media (min-width: @screen-xs-min) {
+  @media (min-width: @screen-sm-min) {
     position: absolute;
     right: 0;
     text-align: right;
